# bunq-hackathon-7

./: .env.example  .gitignore  README.md
backend/: .bunq_context.json  pyproject.toml
backend/.test_data/: make_receipt.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  smoke_test.py
backend/app/api/: deps.py  routes_agent.py  routes_bunq.py  routes_dashboard.py  routes_goals.py  routes_receipts.py  routes_settings.py  routes_transactions.py
backend/app/services/: ai_agent.py  ai_receipt_extractor.py  bunq_client.py  bunq_sync.py  demo_data.py  demo_seed.py  goals.py  metrics.py  nutrition_lookup.py  open_food_facts_client.py  receipt_processing.py  schijf_classifier.py  transaction_matcher.py
backend/app/tests/: conftest.py  test_agent_and_voice.py  test_goals.py  test_matcher_classifier.py  test_receipt_flow.py  test_seed_and_metrics.py
backend/bunq_bite_balance_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/charts/: CategoryPie.tsx
frontend/src/components/dashboard/: CategoryBar.tsx  ChallengeBar.tsx  ProjectionTile.tsx  WeeklyTrend.tsx
frontend/src/lib/: api.ts  auth.ts  format.ts  queryClient.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  GoalSettingsPage.tsx  InstantSummaryPage.tsx  LandingPage.tsx  LoginPage.tsx  MonthlySummaryPage.tsx  ReceiptReviewPage.tsx  RegisterPage.tsx  ScanUploadPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
(+4 files in other folders)
