[project]
name = "bunq-bite-balance-backend"
version = "0.2.0"
description = "FastAPI backend for the Bunq Bite Balance hackathon MVP — Anthropic-powered multimodal AI for receipt extraction, voice intake, and an agentic financial coach."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "rapidfuzz>=3.10.0",
    "anthropic>=0.96.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pillow>=10.2.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
